--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = { version = "4.5.39", features = ["derive"] }
 clearscreen = "4.0.1"
+dotenv = "0.15.0"
 hex = "0.4.3"
 hmac = "0.12.1"
 qrcode = "0.14.1"
+reqwest = { version = "0.12.19", features = ["blocking", "json", "rustls-tls"] }
+serde_json = "1.0.140"
 sha1 = "0.10.6"
