--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "qingwa"
 version = "0.1.0"
 edition = "2024"
 
+[lints.clippy]
+pedantic = { level = "warn", priority = -1 }
+nursery = { level = "warn", priority = -1 }
+needless_return = "allow"
+
 [dependencies]
 clap = { version = "4.5.39", features = ["derive"] }
 clearscreen = "4.0.1"
@@ -15,6 +20,6 @@ regex = "1.11.1"
 reqwest = { version = "0.12.19", features = ["blocking", "json", "rustls-tls"] }
 serde_json = "1.0.140"
 sha1 = "0.10.6"
-tokio = { version = "1.45.1", features = ["macros", "rt"] }
+tokio = { version = "1.45.1", features = ["io-std", "macros", "rt"] }
 zbus = "5.7.1"
 zvariant = "5.5.3"
